--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <style>
         #map {
             width: 100%;
-            height: 100%;
+            height: 619px;
         }
         </style>
         <title></title>
